--- a/config.yaml
+++ b/config.yaml
@@ -15,10 +15,10 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+  - id: navi.zlcom.pp.ua # unique identifier
+    name: navi.zlcom.pp.ua
+    description: 'HZ的路标，在这里找寻前进之路' # default=empty
+    url: 'https://navi.zlcom.pp.ua/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
